--- a/imgEx1.html
+++ b/imgEx1.html
@@ -5,9 +5,10 @@
     <title>imgEx1</title>
   </head>
   <body>
-    <div style="width:400px">
     
-     <img src="./imgaes/logo.gif" alt="로고">
+    <div style="width:600px">
+    
+     <img src="./images/logo.gif" alt="로고">
   
     <figure>
       <img src="./images/chocolate-islands.jpg">
@@ -17,7 +18,7 @@
     <h1>상세 요리법</h1>
       <img src="./images/lemon-posset.jpg" alt="레몬파스타">
       <img src="./images/roasted-brussel-sprouts.jpg" alt="방울다다기양배추">
-      <img src="./imgaes/zuncchini-cake.jpg" alt="케이크">
+      <img src="./images/zucchini-cake.jpg" alt="cake">
     </div>
   </body>
 </html>
