--- a/imgEx2.html
+++ b/imgEx2.html
@@ -19,7 +19,7 @@
         <li>다시 식빵으로 덮~</li>
       </ol>
     <hr>
-    <em>출처 <a href="http://tvn.tving.com/tvn" target="_blank">tvN사이트바로가기</a></em>
+    <em><strong>출처</strong> <a href="http://tvn.tving.com/tvn" target="_blank">tvN사이트바로가기</a></em>
     <hr>
     <h3>이미지로 보기</h3>
       <ol>
