--- a/imgEx2.html
+++ b/imgEx2.html
@@ -5,7 +5,7 @@
     <title>imgEx2</title>
   </head>
   <body>
-    <h1><figure><a href="imgEx.html"><img src="./images/img01.jpg"></a></figure></h1>
+    <h1><figure><a href="imgEx2.html"><img src="./images/img01.jpg"></a></figure></h1>
     <figcaption>백종원 레시피 불고기 샌드위치</figcaption>
     <hr>
     <h1>백종원의 '불고기 샌드위치' 레시피</h1>
