--- a/imgEx2.html
+++ b/imgEx2.html
@@ -5,8 +5,9 @@
     <title>imgEx2</title>
   </head>
   <body>
-    <h1><figure><a href="imgEx2.html"><img src="./images/img01.jpg"></a></figure></h1>
+    <figure><a href="imgEx2.html"><img src="./images/img01.jpg"></a>
     <figcaption>백종원 레시피 불고기 샌드위치</figcaption>
+    </figure>
     <hr>
     <h1>백종원의 '불고기 샌드위치' 레시피</h1>
     <h2>재료</h2>
