--- a/imgEx2.html
+++ b/imgEx2.html
@@ -7,7 +7,7 @@
   <body>
     <figure><a href="imgEx2.html"><img src="./images/img01.jpg"></a>
     <figcaption>백종원 레시피 불고기 샌드위치</figcaption>
-    </figure>
+  </figure>
     <hr>
     <h1>백종원의 '불고기 샌드위치' 레시피</h1>
     <h2>재료</h2>
@@ -20,7 +20,10 @@
         <li>다시 식빵으로 덮~</li>
       </ol>
     <hr>
-    <em><strong>출처</strong> <a href="http://tvn.tving.com/tvn" target="_blank">tvN사이트바로가기</a></em>
+    <cite>
+      <strong>출처</strong>
+      <a href="http://tvn.tving.com/tvn" target="_blank">tvN사이트바로가기</a>
+    </cite>
     <hr>
     <h3>이미지로 보기</h3>
       <ol>
