--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <meta property="og:title" contetnt="오픈그래피 연습">
  <meta property="og:discription" contetnt="오대균 오픈그래피">
  <meta property="og:image" contetnt="http://rbsss2.github/ex/images/odg.jpg">
- <meta property="og:url" contetnt="https://github.com/rbsss2/ex">
+ <meta property="og:url" contetnt="https://rbsss2.github.io/ex/">
 <body>
   <h1>Open Graph 연습</h1>
   <ul>
