--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
   <title>Open Graph 연습</title>
   <meta name="title" content="Open Graph 연습">
   <meta name="descrition" content="실제 업로드를 통해 og 확인할 문서입니다.">
-</head>
+
 
 <!--og-->
- <meta property="og:title" contetnt="오픈그래피 연습">
- <meta property="og:discription" contetnt="오대균 오픈그래피">
- <meta property="og:image" contetnt="http://rbsss2.github.io/ex/images/odg.jpg">
- <meta property="og:url" contetnt="https://rbsss2.github.io/ex/">
+ <meta property="og:title" content="오픈그래피 연습">
+ <meta property="og:discription" content="오대균 오픈그래피">
+ <meta property="og:image" content="http://rbsss2.github.io/ex/images/odg.jpg">
+ <meta property="og:url" content="https://rbsss2.github.io/ex/">
+</head>
 <body>
   <h1>Open Graph 연습</h1>
   <ul>
