--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <meta property="og:title" content="오픈그래피 연습">
  <meta property="og:discription" content="오대균 오픈그래피">
  <meta property="og:image" content="http://rbsss2.github.io/ex/images/odg.jpg">
- <meta property="og:url" content="https://rbsss2.github.io/ex/">
+ <meta property="og:url" content="https://rbsss2.github.io/ex">
 </head>
 <body>
   <h1>Open Graph 연습</h1>
