--- a/webex1.html
+++ b/webex1.html
@@ -7,7 +7,7 @@
 <style>
   body{
     
-    background-image:url(/images/more-leaves.png)
+    background-image:url(../images/more-leaves.png)
   }
   .cooking{
     margin:0 auto;
@@ -16,7 +16,7 @@
     width:940px; height:808px;
   }
   .cooking header{
-    background-image:url(/images/web\ 로고.png);
+    background-image:url(../images/로고.png);
     background-repeat: no-repeat;
     /* background-size:90px; */
     background-position:20px;
