--- a/webex1.html
+++ b/webex1.html
@@ -7,7 +7,7 @@
 <style>
   body{
     
-    background-image:url(../images/more-leaves.png)
+    background-image:url(./images/more-leaves.png)
   }
   .cooking{
     margin:0 auto;
@@ -16,7 +16,7 @@
     width:940px; height:808px;
   }
   .cooking header{
-    background-image:url(../images/로고.png);
+    background-image:url(./images/로고.png);
     background-repeat: no-repeat;
     background-size:90px;
     background-position:20px;
@@ -212,7 +212,7 @@
 </nav>
 <section>
  <figure>
-  <img src="../images/cat.png" alt="채소">
+  <img src="./images/cat.png" alt="채소">
   <figcaption>oriantal source</figcaption>
   </figure>
   <article>
@@ -221,7 +221,7 @@
   <p>5주간 채식주의자 음식에 대해 소개하고 쌀과 국수 요리를 가르친다.</p>
 </article>
   <figure class="photo2">
- <img src="../images/cat.png" alt="채소">
+ <img src="./images/cat.png" alt="채소">
  <figcaption>Soy source</figcaption>
   </figure>
 <article class="article2">
